--- a/eloyin-frontend/src/sass/app.sass
+++ b/eloyin-frontend/src/sass/app.sass
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Roboto+Condensed:wght@300;400;700&display=swap')
-@import "./framework/index.sass"
-@import "./elements"
+@import "framework/index"
+@import "elements/index"
 
 .page
   min-height: calc(100vh - 56.3rem)
