--- a/eloyin-frontend/src/sass/framework/elements/index.sass
+++ b/eloyin-frontend/src/sass/framework/elements/index.sass
@@ -1,5 +1,5 @@
-@use "./typography"
-@use "./buttons"
-@use "./colors"
-@use "./form"
-@use "./section"
+@use "typography"
+@use "buttons"
+@use "colors"
+@use "form"
+@use "section"
