--- a/eloyin-frontend/src/sass/framework/elements/section.sass
+++ b/eloyin-frontend/src/sass/framework/elements/section.sass
@@ -1,8 +1,10 @@
-@use "./../mixins"
-.section 
+@use "../mixins"
+\:root
+  --scrollbar-width: calc(100vw - 100%)
+.section
   &__container
-    display: grid    
-    grid-template-columns: auto var(--container, 1fr) auto    
+    display: grid
+    grid-template-columns: auto var(--container, 1fr) auto
     height: var(--height, auto)
     width: 100%
     &.height-lg
@@ -19,7 +21,7 @@
       --height: auto
     &.height-screen
       --height: 100vh
-  &__backdrop  
+  &__backdrop
     grid-area: 1/1/1/-1
     z-index: -1
     max-height: var(--height)
@@ -31,16 +33,35 @@
       left: 0
       right: 0
       background: rgba(0, 0, 0, 0.3)
-    > video, img 
+    > video, img
       object-fit: cover
     &.backdrop-container
       grid-area: 1/2/-1/3
-  
   &__content
     grid-area: 1/2/1/3
-    padding: var(--container-top-spacing, 0rem) var(--grid-gap) var(--container-bottom-spacing, 0rem)
-    
-
-
-
-    
+    padding: var(--container-top-spacing, 0rem) var(--grid-gap) var(--container-bottom-spacing, 0rem)    
+.container
+  --container: calc(100vw - var(--scrollbar-width, 4rem))
+  +mixins.breakpoint(md)
+    --container: calc(1024px - var(--scrollbar-width, 4rem))
+  +mixins.breakpoint(lg)
+    --container: calc(1280px - var(--scrollbar-width, 4rem))
+  +mixins.breakpoint(xl)
+    --container: calc(1440px - var(--scrollbar-width, 4rem))
+  +mixins.breakpoint(xxl)
+    --container: calc(1920px - var(--scrollbar-width, 4rem))
+  &--narrow
+    --container: calc(100vw - var(--scrollbar-width, 4rem))
+    +mixins.breakpoint(md)
+      --container: calc(1024px - var(--scrollbar-width, 4rem))
+    +mixins.breakpoint(lg)
+      --container: calc(1280px - var(--scrollbar-width, 4rem))
+    +mixins.breakpoint(xl)
+      --container: calc(1300px - var(--scrollbar-width, 4rem))
+    +mixins.breakpoint(xxl)
+      --container: calc(1300px - var(--scrollbar-width, 4rem))
+  &--wide
+    --container: calc(100vw - var(--scrollbar-width, 4rem))
+    .section__content
+      padding-left: 0
+      padding-right: 0
