--- a/eloyin-frontend/src/sass/framework/layout/general.sass
+++ b/eloyin-frontend/src/sass/framework/layout/general.sass
@@ -1,4 +1,3 @@
-
 html
   font-size: 10px  
 body
@@ -9,3 +8,6 @@ a:not(.btn)
   text-decoration: underline
 *
   box-sizing: border-box
+img 
+  display: block 
+  max-width: 100%  
