--- a/eloyin-frontend/src/sass/framework/variables.sass
+++ b/eloyin-frontend/src/sass/framework/variables.sass
@@ -14,7 +14,7 @@ $inheritedColors:  (content: #000,  link: var(--color-brand), border: var(--colo
 $availability: (stock-ok: #008900, stock-limited: #FF3D00, stock-none: #d50000)
 $darkThemedButtons: (primary:primary-darker, secondary:secondary-darker,tertiary:tertiary-darker, brand:brand-darker, accent:accent-darker, buy:buy-darker, dark:dark, muted:dark)
 $lightThemedButtons: (neutral: dark, neutral-light: dark, light: dark)
-$textColors: light, neutral, neutral-light, muted, dark, link, brand, brand-darker, brand-lighter, accent, accent-darker, accent-lighter, buy, buy-darker, buy-lighter, success, information, warning, error, alert
+$textColors: light, neutral, neutral-light, muted, dark, link, brand, brand-darker, brand-lighter, accent, accent-darker, accent-lighter, buy, buy-darker, buy-lighter, success, information, warning, error, alert, gray-1, gray-2, gray-3, gray-4, gray-5, gray-6, gray-7, gray-8, gray-9, gray-10
 //defaults to hover:dark
 //$neutralButtons: (light:dark, muted:light, dark:light)
 
