--- a/eloyin-frontend/src/sass/framework/mixins.sass
+++ b/eloyin-frontend/src/sass/framework/mixins.sass
@@ -4,3 +4,18 @@
 =breakpoint($breakpoint)
   @media (min-width: map.get(variables.$breakpoints,$breakpoint))
     @content
+=placeholder
+  &::-webkit-input-placeholder 
+    @content
+  &:-moz-placeholder           
+    @content
+  &::-moz-placeholder          
+    @content
+  &:-ms-input-placeholder      
+    @content
+=ellipsis
+  display: inline-block 
+  max-width: 100%
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap    
