--- a/eloyin-frontend/src/sass/framework/utility/box-visibility.sass
+++ b/eloyin-frontend/src/sass/framework/utility/box-visibility.sass
@@ -19,7 +19,7 @@
   .grid-#{$i}
     display: grid
     grid-gap: var(--grid-gap, 0rem)
-    grid-template-columns: repeat(var(--grid-cols), 1fr)
+    grid-template-columns: repeat(var(--grid-cols), minmax(0,1fr))
     --grid-cols: #{$i}
 .hidden
   display: none
@@ -51,7 +51,7 @@
       @media(min-width: #{$value})
         display: grid
         grid-gap: var(--grid-gap, 0rem)
-        grid-template-columns: repeat(var(--grid-cols), 1fr)
+        grid-template-columns: repeat(var(--grid-cols), minmax(0,1fr))
         --grid-cols: #{$i}
 @each $key, $value in variables.$breakpoints
   .hidden-#{$key}
@@ -72,14 +72,13 @@
 .overflow-y-auto 
   overflow-y: auto   
 .z-unset 
-  z-index: unset 
-@for $i from 0 through 10
-  .z-#{$i}
-    z-index: #{$i}     
+  z-index: unset    
 
 @for $i from -1 through 10
   .order-#{$i}
     order: #{$i}
+  .z-#{$i}
+    z-index: #{$i}
 @each $key, $value in variables.$breakpoints
   @for $i from -1 through 10
     .order-#{$key}-#{$i}
@@ -93,7 +92,15 @@
 .opacity-1  
   opacity: 1
   
-
+@for $i from 1 through 10
+  .row-start-#{$i}
+    grid-row-start: #{$i}
+  .row-end-#{$i}
+    grid-row-end: #{$i}
+  .column-start-#{$i}
+    grid-column-start: #{$i}
+  .column-end-#{$i}
+    grid-column-end: #{$i}    
     
 
 
