--- a/eloyin-frontend/src/sass/framework/utility/color-utilities.sass
+++ b/eloyin-frontend/src/sass/framework/utility/color-utilities.sass
@@ -5,6 +5,13 @@
     color: var(--color-#{$color})
     --link-color: var(--color-#{$color})
     --icon-color: var(--color-#{$color})
+  .hover-#{$color}   
+    &:hover
+      color: var(--color-#{$color})
+      --link-color: var(--color-#{$color})
+  .icon-hover-#{$color}   
+    &:hover
+      --icon-color: var(--color-#{$color})  
   .border-#{$color}
     border-color: var(--color-#{$color}) !important
   .bg-#{$color}
