--- a/eloyin-frontend/src/sass/framework/utility/general-utilities.sass
+++ b/eloyin-frontend/src/sass/framework/utility/general-utilities.sass
@@ -7,17 +7,19 @@
 .box-shadow
   --box-shadow: #00000021 0 0 15px 0
   box-shadow: var(--box-shadow)
-
-.icon-small 
+  
+.icon-xs
   --icon-size: 1.2rem
-.icon-default
+.icon-sm
+  --icon-size: 1.4rem
+.icon-md 
   --icon-size: 1.6rem
-.icon-medium
+.icon-lg
   --icon-size: 2rem
-.icon-large 
-  --icon-size: 2.8rem
-.icon-xlarge
-  --icon-size: 3.2rem     
+.icon-xl 
+  --icon-size: 2.4rem
+.icon-xxl
+  --icon-size: 3.2rem  
 
 .object-fit-cover
   object-fit: cover
