--- a/eloyin-frontend/src/sass/framework/utility/text-utilities.sass
+++ b/eloyin-frontend/src/sass/framework/utility/text-utilities.sass
@@ -1,4 +1,5 @@
 @use "./../variables"
+@use "../mixins"
 \:root
   --font-xs: 1rem
   --font-sm: 1.2rem
@@ -18,6 +19,8 @@
   text-transform: uppercase
 .text-transform-none
   text-transform: none
+.text-ellipsis
+  +mixins.ellipsis
 .text-center
   text-align: center
 .text-left
@@ -42,8 +45,10 @@
   font-family: var(--font-condensed, "Roboto Condensed",sans-serif)
 .font-regular    
   font-family: var(--font-regular, "Open Sans", sans-serif)
-.line-height-inline
-  line-height: 1  
+.line-height-2
+  line-height: 2
+.line-height-1
+  line-height: 1
 .link
   display: inline-flex
   align-items: center
